# oplas

./: pyproject.toml  run.sh  setup.py  train.py
nbs/: mixer-toy.ipynb  rot_2d.ipynb  rot_nd.ipynb
oplas/: __init__.py  data.py  losses.py  mixing.py  models.py  rotations.py  viz.py
