[project]
name = "oplas"
version = "0.0.1"
description = "Operational Latent Spaces (OpLaS)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Scott H. Hawley", email = "scott.hawley@belmont.edu" }
]

urls = {  "Homepage" = "https://github.com/drscotthawley/oplas" }

dependencies = [
  "torch==2.4.0",
  "torchvision==0.19.0",
  "torchaudio==2.4.0",
  "einops",
  "stempeg",
  "tqdm",
  "wandb",
  "laion-clap",
  "aeiou",
  "matplotlib",
  "setuptools>=75.3.2",
  "torchdata>=0.8.0",
  "music2latent>=0.1.6",
  "vicregaddon>=0.0.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]

[tool.ruff.lint.flake8-tidy-imports]
